--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,21 +1,8 @@
 .header {
-  padding: 20px 0;
-}
-
-.nav-list {
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  gap: 40px;
-}
-
-.nav-link {
-  font-weight: 500;
-  letter-spacing: 0.02em;
-  line-height: 1.5;
-}
-
-.nav-link:hover,
-.nav-link:focus {
-  color: #747bff;
+  font-family: 'Roboto', sans-serif;
+  background-color: black;
+  color: var(--main-color);
+  background-image: url('/img/vite-logo.png');
+  background-repeat: no-repeat;
+  background-position: center;
 }
