--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,13 +1,11 @@
 <header class="header">
-  <nav class="nav">
-    <ul class="nav-list">
-      <li class="nav-item">
-        <a href="./page-2.html" class="nav-link">Page 2</a>
-      </li>
-
-      <li class="nav-item">
-        <a href="./page-3.html" class="nav-link">Page 3</a>
-      </li>
-    </ul>
-  </nav>
+  <a href="./page-2.html">Page2</a>
+  <p>
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam,
+    reiciendis. Impedit, sed. Velit, soluta quis. Obcaecati quo fuga accusantium
+    possimus, excepturi dolore mollitia sapiente alias laudantium vero ipsum
+    unde commodi.
+  </p>
+  <img src="./img/vite-logo.png" alt="Це з ./" width="200" height="200" />
+  <img src="../img/vite-logo.png" alt="Це з ../" width="200" height="200" />
 </header>
